--- a/style.css
+++ b/style.css
@@ -44,16 +44,13 @@ body{
     border: 1px solid lightgray;
     width:100%;
     border-spacing: 0;
-    min-height: 200px;
+    min-height: 250px;
     overflow-x: auto;
     font-size: 14px;
     color: lightgray;
 }
 
-th{
-    text-align: top;
-}
-td{
+th,td{
     text-align: center;
 }
 
@@ -64,12 +61,13 @@ th{
 }
 
 td{
-    padding: 10px;
+    padding: 5px;
     border: 1px solid lightgray;
 }
 
-tbody{
-    height: auto;
+#tbody{
+    height:30px;
+    border: 1px solid lightgray;
 }
 
 .search{
